[workspace]
resolver = "2"
members = [
    "poker-arena",
    "poker-arena-service",
    "poker-arena-types",
    "poker-contract",
    "poker-service",
    "poker-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[workspace.dependencies]
async-graphql = "4.0"
async-trait = "0.1.83"
bcs = "0.1.6"
bincode = "1.3.3"
linera-sdk = { version = "0.15.6", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.1"
log = "0.4"

# Internal crates
poker-arena = { path = "poker-arena" }
poker-arena-types = { path = "poker-arena-types" }
poker-types = { path = "poker-types" }
