[package]
name = "poker-arena"
version.workspace = true
edition.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
bcs.workspace = true
linera-sdk.workspace = true
poker-arena-types.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
futures = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
