[package]
name = "poker-contract"
version.workspace = true
edition.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
linera-sdk.workspace = true
log.workspace = true
poker-arena-types.workspace = true
poker-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
